# lib/db/src/schema/assets.ts
@@ -15,6 +15,9 @@ export const assetsTable = pgTable("assets", {
   description: text("description").notNull(),
   price: doublePrecision("price").notNull(),
   currency: text("currency").notNull(),
+  robuxPrice: doublePrecision("robux_price"),
+  dollarPrice: doublePrecision("dollar_price"),
+  priceDisplay: text("price_display").notNull().default("USD"),
   category: text("category").notNull(),
   imageUrls: text("image_urls").array().notNull(),
   discordLink: text("discord_link").notNull(),
